syntax = "proto3";

package profiles;

option go_package = "github.com/goriiin/kotyari-bots_backend/api/protos/profiles/gen";

service ProfileService {
  rpc GetProfile(GetProfileRequest) returns (Profile);

  rpc BatchGetProfiles(BatchGetProfilesRequest) returns (BatchGetProfilesResponse);
}

message Profile {
  string id = 1;
  string profile_prompt = 2;
}

message GetProfileRequest {
  string id = 1;
}

message BatchGetProfilesRequest {
  repeated string id = 1;
}

message BatchGetProfilesResponse {
  repeated Profile profile = 1;
}